magento/adobe-stock-integration#519: Fixed extra margin applied to revisited preview

--- a/AdobeStockImageAdminUi/view/adminhtml/web/css/source/_module.less
+++ b/AdobeStockImageAdminUi/view/adminhtml/web/css/source/_module.less
@@ -146,7 +146,7 @@
             }
 
             .adobe-stock-related-images-tab-content {
-                height: auto;
+                max-height: 190px;
                 vertical-align: middle;
                 display: inline-block;
                 width: 100%;
