--- a/AdobeUi/view/adminhtml/web/css/source/_module.less
+++ b/AdobeUi/view/adminhtml/web/css/source/_module.less
@@ -47,7 +47,6 @@
             display: table;
             background-color: #ffffff;
             width: 100%;
-            padding: 0 0 30px;
 
             .container {
                 max-width: 880px;
